--- a/src/depseek_api_requests.async.ipynb
+++ b/src/depseek_api_requests.async.ipynb
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"sk-059b953786ca47998d730b89e5720674\"\n",
+    "api_key = \"\"\n",
     "url = \"https://api.deepseek.com/v1/chat/completions\""
    ]
   },
