--- a/src/depseek_api_requests.async.ipynb
+++ b/src/depseek_api_requests.async.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"\"\n",
+    "api_key = \"DEEPSEEK_API_KEY\"\n",
     "url = \"https://api.deepseek.com/v1/chat/completions\""
    ]
   },
